# radiation-error-emulator

./: .gitignore  LICENSE  README.md  extracted_proc.dts  iomem.txt  memblock.txt  zoneinfo.txt
example/: CMakeLists.txt  bitmap_tree.h  error_bitmap.h  error_counts_100.txt  get_error.py  images_cfg.txt  logging.h  mem_utils.h  resnet50.cpp  resnet50_inference_error.cpp  resnet50_inference_error_MCU.cpp  resnet50_inference_error_dq.cpp  resnet50_inference_error_paraonly.cpp  resnet50_inference_error_paraonly_dq.cpp  run.py  run_paraonly.py
example/src/: Memory.h
libREMU/: CMakeLists.txt  README.md  bitmap_tree.cpp  bitmap_tree.h  error_bitmap.cpp  error_bitmap.h  mem_utils.cpp  mem_utils.h
libREMU/configs/: README.md  lpddr4_jetson_xavier_nx.yaml  lpddr5_jetson_agx_orin.yaml
libREMU/mappings/: LPDDR4_RoRaBaChCo.map  LPDDR4_RoRaBaCoCh.map  LPDDR4_channel_XOR_16.map  LPDDR4_channel_XOR_32.map  LPDDR4_dumb.map  LPDDR4_row_interleaving_16.map  LPDDR4_row_interleaving_32.map  README.md
libREMU/src/: Config.cpp  Config.h  LPDDR4.cpp  LPDDR4.h  Memory.h
licenses/: ramulator_LICENSE.txt
utils/bitcal/: CMakeLists.txt  a.cpp  bit_tools.cpp  bit_tools.h  bit_tools.inl
utils/pa2da/: CMakeLists.txt  out.txt
utils/pa2da/configs/: lpddr4_jetson_nx.yaml
utils/pa2da/include/: addr_mapper.h  bit_map_tree.h  config_loader.h  types.h
utils/pa2da/src/: addr_mapper.cpp  bit_map_tree_test.cpp  config_loader.cpp  main.cpp
utils/sysinfo/: sys_tools.cpp  sys_tools.h  test_sys_tools.cpp
